--- a/src/assets/stylus/common.styl
+++ b/src/assets/stylus/common.styl
@@ -1,5 +1,8 @@
 body,html
   height 100%
+body
+  padding-top 56px
+  margin-left: calc(100vw - 100%);
 table
   background-color: transparent
   border-collapse: collapse;
@@ -20,6 +23,12 @@ input[type=checkbox], input[type=radio]
   z-index: 1030;
 .pull-left
   float left!important
+.avatar img
+  width 100%
+  height 100%
+  border 1px solid rgb(221,221,221)
+  border-image initial
+  border-radius 50%
 #app
   font-size 17px
   position absolute
